updated vignette to support quarto

--- a/vignettes/getting_started.Qmd
+++ b/vignettes/getting_started.Qmd
@@ -3,7 +3,7 @@ title: "Getting started with cppSim"
 # output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{getting_started}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 format:
   html:
@@ -12,6 +12,7 @@ format:
 ---
 
 ```{r, include = FALSE}
+library(quarto)
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
