--- a/README.Rmd
+++ b/README.Rmd
@@ -93,7 +93,7 @@ On the R side, it uses `Rcpp` [@eddelbuettel2011] and `RcppArmadillo` [@eddelbue
 
 ## Performance
 
-Compared to the equivalent functions implemented in pure R, it runs about x10 faster for a $\sim 1000\times 1000$ OD matrix, the speed up is increasignly more significant as matrices get bigger.
+Compared to the equivalent functions implemented in pure R, it runs about x10 faster for a $\sim 1000\times 1000$ OD matrix, the speed up is increasingly more significant as matrices get bigger.
 
 ```{r performance,eval=TRUE,include=TRUE,echo = FALSE}
 
