--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   eval = FALSE,
-  comment = "#>",
+  comment = "",
   # fig.path = "man/figures/README-",
   out.width = "100%"
 )
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 # cppSim
 
 <!-- badges: start -->
-
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.14367756.svg)](https://doi.org/10.5281/zenodo.14367756)
 [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html#stable) ![](https://github.com/ischlo/cppSim/actions/workflows/check-standard.yaml/badge.svg) [![arXiv](https://img.shields.io/badge/arXiv-1234.56789-b31b1b.svg?style=flat-square)](https://arxiv.org/abs/2309.02112)
 ![](https://github.com/ischlo/cppSim/actions/workflows/rhub.yaml/badge.svg)
 
